--- a/marvel-challenge/src/app/character/[id]/CharacterDetail.module.css
+++ b/marvel-challenge/src/app/character/[id]/CharacterDetail.module.css
@@ -26,13 +26,9 @@
 }
 
 .characterImage img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
 }
+
 .characterInfo {
   flex: 1;
   padding: var(--padding-md);
@@ -48,6 +44,16 @@
   justify-content: space-between;
   margin-bottom: var(--margin-md);
   padding: var(--padding-xs);
+}
+
+.heroDescription {
+  font-size: var(--font-size-lg);
+}
+
+.characterTitle h1 {
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-extra);
+  line-height: 4.7rem;
 }
 
 .characterComics {
@@ -96,7 +102,8 @@
 
   .characterComicsContent {
     margin: 0;
-    padding: var(--padding-sm);
+    padding: var(--padding-md);
+    width: 100vw;
   }
 }
 
