--- a/marvel-challenge/src/components/CharacterCard/CharacterCard.module.css
+++ b/marvel-challenge/src/components/CharacterCard/CharacterCard.module.css
@@ -2,15 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 350px; /* Define la altura fija de la tarjeta */
+  height: 350px;
   overflow: hidden;
   border: 1px solid #ddd;
-  position: relative; /* Necesario para que cornerCut se posicione correctamente */
+  position: relative;
+  cursor: pointer;
 }
 
 .charCardImg {
   flex: 1 1 auto;
-  position: relative; /* Necesario para que la imagen de Next.js ocupe todo el contenedor */
+  position: relative;
   width: 100%;
   overflow: hidden;
 }
@@ -21,8 +22,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Hace que la imagen ocupe todo el contenedor manteniendo la proporción */
-  object-position: center; /* Centra la imagen dentro del contenedor */
+  object-fit: cover;
+  object-position: center;
 }
 
 .charCardInfo {
@@ -36,6 +37,7 @@
   height: auto;
   flex-shrink: 0;
   position: relative;
+  font-size: var(--font-size-lg);
 }
 
 .cornerCut {
