--- a/marvel-challenge/src/components/ComicCarousel/ComicCarousel.module.css
+++ b/marvel-challenge/src/components/ComicCarousel/ComicCarousel.module.css
@@ -1,8 +1,7 @@
-/* Comiccomics.module.css */
 .comics {
   overflow-y: hidden;
   display: flex;
-  padding-right: 20px;
+  gap: 20px;
 }
 
 .carousel {
@@ -11,6 +10,49 @@
   width: 70%;
   max-height: 40vh;
   width: 100vw;
+}
+
+.card {
+  width: 180px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.imageContainer {
+  position: relative;
+  width: 100%;
+  height: 270px;
+  overflow: hidden;
+}
+
+.image {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+.year {
+  color: #888;
+  font-size: var(--font-size-md);
+}
+
+.details {
+  margin-top: 10px;
+  position: relative;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.title {
+  font-weight: var(--font-weight-medium);
+  font-size: var(--font-size-lg);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+  white-space: normal;
+  overflow: hidden;
 }
 
 .comics::-webkit-scrollbar {
@@ -27,4 +69,24 @@
 
 .comics::-webkit-scrollbar-track {
   background-color: white;
+}
+
+@media screen and (max-width: 835px) {
+  .card {
+    width: 169px;
+  }
+
+  .imageContainer {
+    height: 253px;
+  }
+}
+
+@media screen and (max-width: 394px) {
+  .card {
+    width: 164px;
+  }
+
+  .imageContainer {
+    height: 246px;
+  }
 }
